--- a/style.css
+++ b/style.css
@@ -1,2 +1,4 @@
-p {font-family: 'Macondo', cursive;font-size: 1,5rem;}
+p {font-family: 'Macondo', cursive;font-size: 1rem;}
 .überschrift {text-align: center;}
+
+footer {text-align: center;}
