--- a/style.css
+++ b/style.css
@@ -2,3 +2,7 @@ p {font-family: 'Macondo', cursive;font-size: 1rem;}
 .überschrift {text-align: center;}
 
 footer {text-align: center;}
+
+.box{
+    margin-top: 5rem !important;
+    margin-left: 5rem !important;}
