--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
 p {font-family: 'Macondo', cursive;font-size: 1rem;}
+
+h3 {text-align: center;text-decoration: underline;}
+
 .überschrift {text-align: center;}
 
 footer {text-align: center;}
