--- a/style.css
+++ b/style.css
@@ -7,6 +7,17 @@ h3 {text-align: center;text-decoration: underline;}
 /* Footer mittig gesetzt */
 footer {text-align: center;}
 
+/* Aish Css Datei für index html */
+.bild{
+
+    transition:transform 0.01s;
+    transition: 0.5s ease-out;
+}
+
+ .bild:hover {
+        transform: scale(1.3, 1.3);
+}
+
 
 /* Sham Css Dateien für Piemont html */
 .box{
