--- a/style.css
+++ b/style.css
@@ -30,3 +30,7 @@ footer {text-align: center;}
         float:right;
         font-style: italic;
     }
+
+    .img-Piemont{
+        width:50vw;
+    }
